Fixed horizontal scrolling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,3 +51,7 @@ body h1 {
     cursor: pointer;
     opacity: 0.7; /* Set transparency */
 }
+
+body {
+    overflow-x: hidden; /* Prevent horizontal scroll */
+}
